--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando entorno Desarrollo
-configuracion.autor.nombre=jesus_ramirez_guerrero
-configuracion.autor.email=jesramgue@gmail.com
+configuracion.texto=Configurando entorno Desarrollo ...
+configuracion.autor.nombre=pepe
+configuracion.autor.email=pepe@gmail.com
